--- a/client/src/styles/_navBar.scss
+++ b/client/src/styles/_navBar.scss
@@ -35,7 +35,7 @@
         position: absolute;
         list-style: none;
         background-color: $color-light;
-        bottom: -780%;
+        bottom: -795%;
         right: 0%;
         z-index: 100;
         border-radius: $border-radius;
@@ -477,7 +477,7 @@
     .navbar {
       .hamburger {
         .dropdown-mobile {
-          bottom: -900%;
+          bottom: -915%;
         }
       }
     }
